@@ -1,4 +1,6 @@
 ver 0.18.13 (not yet released)
+* decoder
+  - ffmpeg: support ffmpeg/libav version 11
 
 ver 0.18.12 (2014/07/30)
 * database
